--- a/manifests/quick-start-postgres.yaml
+++ b/manifests/quick-start-postgres.yaml
@@ -1623,6 +1623,7 @@ kind: Service
 metadata:
   name: argo-server
 spec:
+  type: NodePort
   ports:
   - name: web
     port: 2746
@@ -1637,6 +1638,7 @@ metadata:
     app: httpbin
   name: httpbin
 spec:
+  type: NodePort
   ports:
   - name: api
     port: 9100
@@ -1652,6 +1654,7 @@ metadata:
     app: minio
   name: minio
 spec:
+  type: NodePort
   ports:
   - name: api
     port: 9000
@@ -1671,6 +1674,7 @@ metadata:
     app: postgres
   name: postgres
 spec:
+  type: NodePort
   ports:
   - port: 5432
     protocol: TCP
